# 3N-322

./: .gitignore  CMakeLists.txt  README.md
configuration/: root_directory.h.in
includes/: context.h  imgui_impl_opengl3.h
includes/assimp/: config.h
includes/model/: camera.h  custom_math.h  mesh.h  model.h  surround_camera.h
includes/render/: opengl_render.h
includes/shader/: my_shader_loader.h
includes/texture/: texture_2d.h
includes/tools/: class_tools.h  controller.h  custom_math.h  data_watcher.h  filesystem.h  my_shader_loader.h  syntax_sugar.h
resources/objects/dd/: gedou.fbx
resources/objects/gd/: sazabi_1.mtl
resources/objects/hat/: model.mtl
resources/objects/lj/: WhaleAnim03.fbx
resources/objects/mg/source/: MANTA2.fbx
resources/objects/sz/temp_skin_20491_140720344863040_2340041616.fbm/: Deathstroke_Hair_D.tga
resources/objects/sz/textures/: Deathstroke_Eye_D.tga  Deathstroke_Head_D.tga  Deathstroke_Mask_D.tga  Deathstroke_Weapons_D.tga
src/: 1.model_loading.fs  1.model_loading.vs  6.3.coordinate_systems.fs  context.cpp  main.cpp  main.txt  my_shader_loader.cpp  opengl_render.cpp
src/model/: mesh.cpp  model.cpp
src/shader/: 1.model_loading.vs  animation.vs  es.fs  model.fs  model_2d.fs  static_model.vs
src/stdimage/: stb_image.cpp
src/temp/: main.txt  texture_2d.txt  ttt.cpp
src/tools/: controller.cpp  custom_math.cpp  filesystem.cpp  my_shader_loader.cpp  syntax_sugar.cpp
